# tech-debtor

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml  labeler.yml  release-drafter.yml
.github/workflows/: dependency-check.yml  docs.yml  lint.yml  release-drafter.yml  release.yml  security.yml  self-analysis.yml  stale.yml  test.yml
docs/: README.md  workflows-implementation-plan.md
docs/plans/: 2026-02-05-tech-debtor-design.md  2026-02-05-tech-debtor-implementation.md
scripts/: create-labels.sh  create-stale-labels.sh
src/tech_debtor/: __init__.py  cli.py  config.py  models.py  scanner.py  scoring.py
src/tech_debtor/analyzers/: base.py  churn.py  complexity.py  deadcode.py  duplication.py  exceptions.py  security.py  smells.py
src/tech_debtor/reporters/: json_reporter.py  terminal.py
tests/: test_cli.py  test_config.py  test_exceptions.py  test_integration.py  test_json_reporter.py  test_models.py  test_reporters.py  test_scanner.py  test_scoring.py  test_security.py  test_sqale.py
tests/fixtures/: exception_patterns.py  messy_code.py  security_patterns.py
tests/test_analyzers/: test_base.py  test_churn.py  test_complexity.py  test_deadcode.py  test_duplication.py  test_smells.py
